2015-04-03 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-view-entries.c:
	- fix ledgers updates when the entry amount is modified (todo #741).

	* src/api/ofo-entry.h,
	* src/core/ofo-entry.c: ofo_entry_is_editable(): new method.

	* src/api/my-utils.h,
	* src/core/my-utils.c,
	* src/core/ofa-idbms.c,
	* src/ui/my-assistant.c,
	* src/ui/ofa-accounts-book.c,
	* src/ui/ofa-bat-treeview.c,
	* src/ui/ofa-classes-page.c,
	* src/ui/ofa-currencies-page.c,
	* src/ui/ofa-dossier-manager.c,
	* src/ui/ofa-dossier-new.c,
	* src/ui/ofa-dossier-properties.c,
	* src/ui/ofa-export-assistant.c,
	* src/ui/ofa-ledgers-page.c,
	* src/ui/ofa-main-window.c,
	* src/ui/ofa-ope-templates-book.c,
	* src/ui/ofa-rates-page.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-restore-assistant.c,
	* src/ui/ofa-view-entries.c:
	- my_utils_dialog_yesno() is renamed as my_utils_dialog_question()
	because actually makes use of GTK_MESSAGE_QUESTION flag. 

	* src/api/my-utils.h,
	* src/core/my-utils.c,
	* src/core/ofa-dbms.c,
	* src/core/ofa-dossier-misc.c,
	* src/core/ofa-iexportable.c,
	* src/core/ofo-entry.c,
	* src/ui/ofa-check-balances-bin.c,
	* src/ui/ofa-check-integrity-bin.c,
	* src/ui/ofa-dossier-open.c,
	* src/ui/ofa-exercice-close-assistant.c,
	* src/ui/ofa-export-assistant.c,
	* src/ui/ofa-import-assistant.c,
	* src/ui/ofa-iprintable.c,
	* src/ui/ofa-main-window.c,
	* src/ui/ofa-pdf-dialog.c,
	* src/ui/ofa-pdf-ledgers.c,
	* src/ui/ofa-pdf-reconcil.c:
	- my_utils_dialog_error() is renamed as my_utils_dialog_warning()
	because actually makes use of GTK_MESSAGE_WARNING flag.

	Remove obsoleted ofa_main_window_confirm_deletion() method.

	* src/ui/ofa-accounts-book.c,
	* src/ui/ofa-bat-treeview.c,
	* src/ui/ofa-classes-page.c,
	* src/ui/ofa-currencies-page.c,
	* src/ui/ofa-ledgers-page.c,
	* src/ui/ofa-main-window.c,
	* src/ui/ofa-main-window.h,
	* src/ui/ofa-ope-templates-book.c,
	* src/ui/ofa-rates-page.c: updated accordingly.
