@@ -402,17 +402,8 @@
 
  733 2015- 3-15 be able to search for an entry
 
- 738 2015- 3-16 ViewEntries: have a Delete button
-
  740 2015- 3-18 ViewEntries: solde should be blue (normal) even in the
                 case of a rounding error
-
- 741 2015- 3-19 we have an example of unbalanced entries/ledgers/accounts
-                appeared between PWIConsultants-20140731_1.gz (kept) and
-                PWIConsultants-20140731_1.gz (in TODO/741)
-                -> to be analyzed
-                -> ledgers are not correctly updated when modifying an
-                amount in ViewEntries
 
  744 2015- 3-19 have an option to automatically check the balances when
                opening the dossier
@@ -461,7 +452,21 @@
                 (this is for the audit trace: be able to prove that we
                 have kept all generated entries on an exercice base)
 
- 785
+ 785 2015- 4- 3 updating the amount of an entry make the operation date
+                change when it is left that the minimum allowed (though
+                the effect date is correct)
+
+ 786 2015- 4- 3 when inserting a new entry:
+                g_utf8_collate: assertion 'str2 != NULL' failed
+#2  0x0000003d04a780ca in g_utf8_collate () from /lib64/libglib-2.0.so.0
+#3  0x00007ffff7dcf130 in currency_get_by_code (currency=0x0, list=0x9e06c8, list@entry=0xdb8bd0) at ../../../src/core/ofs-currency.c:50
+#4  ofs_currency_add_currency (list=list@entry=0x9e06c8, currency=0x0, debit=0, credit=credit@entry=0) at ../../../src/core/ofs-currency.c:109
+#5  0x0000000000481f69 in compute_balances (self=self@entry=0x9e06f0) at ../../../src/ui/ofa-view-entries.c:1776
+#6  0x0000000000482ffb in on_cell_edited (cell=<optimized out>, path_str=<optimized out>, text=<optimized out>, self=0x9e06f0) at ../../../src/ui/ofa-view-entries.c:2221
+
+ 787 2015- 4- 3 Taxe foncières 2014 du 9/10: piece is null
+
+ 788
 
 -----------------------------------------------------------------------
  DONE
@@ -3458,9 +3463,22 @@
  737 2015- 3-15 Exporting: entry models becomes ope templates
      2015- 3-15 done - git #e3e3803
 
+ 738 2015- 3-16 ViewEntries: have a Delete button
+     2015- 4- 3 no more space for this in the view, and this is even
+                better as this should leave an unsually used feature
+                -> cancelled
+
  739 2015- 3-18 Reconciliation: be able to select two opposite BAT lines
                 cf. also #747
      2015- 4- 3 already fixed when refactoring the reconciliation
+
+ 741 2015- 3-19 we have an example of unbalanced entries/ledgers/accounts
+                appeared between PWIConsultants-20140731_1.gz (kept) and
+                PWIConsultants-20140731_1.gz (in TODO/741)
+                -> to be analyzed
+                -> ledgers are not correctly updated when modifying an
+                amount in ViewEntries
+     2015- 4- 3 fixed - git #f87eb36
 
  742 2015- 3-19 RestoreAssistant: have a filter on *.gz
      2015- 4- 3 done - git #aec67de
